--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <title>Pré-consultation – Activité Physique</title>
 
 <style>
-body{font-family:Arial,sans-serif;background:#f6f7f8;margin:0}
-.container{max-width:800px;margin:auto;padding:20px;background:white;min-height:100vh}
-h1,h2,h3{font-weight:600}
-.section{margin-top:25px;padding-top:10px;border-top:1px solid #ddd}
-.btn{display:block;width:100%;padding:14px;margin:10px 0;font-size:16px;border-radius:6px;border:none;background:#007BFF;color:white}
-.btn.secondary{background:#6c757d}
-.progress{height:6px;background:#ddd;margin:15px 0}
-.progress-bar{height:6px;background:#4caf50}
-input[type=number],input[type=range]{width:100%;padding:10px;font-size:16px;margin-top:10px}
-.footer{font-size:12px;color:#666;margin-top:40px}
-a{color:#007BFF}
+body { font-family: Arial, sans-serif; background:#f6f7f8; margin:0; }
+.container { max-width:720px; margin:auto; padding:20px; background:white; min-height:100vh; }
+h1,h2,h3 { font-weight:600; margin-top:25px; }
+.section { border-top:1px solid #ddd; padding-top:15px; margin-top:20px; }
+.btn { display:block; width:100%; padding:14px; margin:10px 0; font-size:16px; border-radius:6px; border:none; background:#007BFF; color:white; cursor:pointer; }
+.btn.secondary { background:#6c757d; }
+.progress { height:6px; background:#ddd; margin:15px 0; }
+.progress-bar { height:6px; width:0%; background:#4caf50; }
+.footer { font-size:12px; color:#666; margin-top:40px; }
+.answer { margin-left:10px; margin-top:4px; }
+.rgpd { font-size:12px; color:#555; margin-top:8px; }
 </style>
 </head>
 
@@ -24,30 +24,30 @@ a{color:#007BFF}
 <div class="container" id="app"></div>
 
 <script>
-const RGPD_URL="https://abbe-web.github.io/Questionnaire-AutoEvaluation-AP/politique-confidentialite.html";
-
 /*************************************************
  * ÉTAT GLOBAL
  *************************************************/
-const state={
-  tool:null,
-  gpaq:{},
-  result:{},
-  history:[]
+const state = {
+  tool: null,
+  gpaq: {},
+  marshall: {},
+  result: {},
+  history: []
 };
 
 /*************************************************
  * RENDER + RETOUR
  *************************************************/
-function render(html,progress=0){
-  state.history.push(document.getElementById("app").innerHTML);
-  document.getElementById("app").innerHTML=`
-  <div class="progress"><div class="progress-bar" style="width:${progress}%"></div></div>
-  ${html}`;
+function render(html, progress=0, save=true){
+  if(save) state.history.push(document.getElementById("app").innerHTML);
+  document.getElementById("app").innerHTML = `
+    <div class="progress"><div class="progress-bar" style="width:${progress}%"></div></div>
+    ${html}
+  `;
 }
 function back(){
   if(state.history.length>0){
-    document.getElementById("app").innerHTML=state.history.pop();
+    document.getElementById("app").innerHTML = state.history.pop();
   }
 }
 
@@ -56,22 +56,26 @@ function back(){
  *************************************************/
 render(`
 <h1>Activité physique</h1>
-<p>
-Questionnaire destiné à préparer votre consultation médicale.<br>
-<strong>Aucune donnée n’est enregistrée.</strong><br>
-<a href="${RGPD_URL}" target="_blank">Politique de confidentialité</a>
-</p>
+<p>Questionnaire destiné à préparer votre consultation médicale.<br>
+Aucune donnée n’est enregistrée.</p>
+
+<div class="rgpd">
+<a href="https://abbe-web.github.io/Questionnaire-AutoEvaluation-AP/politique-confidentialite.html" target="_blank">
+Politique de confidentialité
+</a>
+</div>
 
 <button class="btn" onclick="start('gpaq')">Questionnaire détaillé (GPAQ)</button>
 <button class="btn secondary" onclick="start('marshall')">Questionnaire court (Marshall)</button>
-`);
+`,0,false);
 
 function start(tool){
-  state.tool=tool;
-  state.gpaq={};
-  state.result={};
-  state.history=[];
-  tool==="marshall"?marshallQ1():gpaqQ1();
+  state.tool = tool;
+  state.gpaq = {};
+  state.marshall = {};
+  state.result = {};
+  state.history = [];
+  tool==="marshall" ? marshallQ1() : gpaqQ1();
 }
 
 /*************************************************
@@ -80,114 +84,150 @@ function start(tool){
 function marshallQ1(){
 render(`
 <h2>Marshall – Question 1</h2>
-<p>≥ 20 min d’activité intense par semaine ?</p>
-<button class="btn" onclick="state.result.m1=4;marshallQ2()">≥ 3 fois</button>
-<button class="btn" onclick="state.result.m1=2;marshallQ2()">1–2 fois</button>
-<button class="btn" onclick="state.result.m1=0;marshallQ2()">Jamais</button>
+<p>≥ 20 min d’activité intense (transpiration, essoufflement)</p>
+<button class="btn" onclick="state.marshall.q1=4; marshallQ2()">≥ 3 fois / semaine</button>
+<button class="btn" onclick="state.marshall.q1=2; marshallQ2()">1–2 fois / semaine</button>
+<button class="btn" onclick="state.marshall.q1=0; marshallQ2()">Jamais</button>
 <button class="btn secondary" onclick="back()">Retour</button>
-`,20);
+`,15);
 }
+
 function marshallQ2(){
 render(`
 <h2>Marshall – Question 2</h2>
-<p>≥ 30 min d’activité modérée ?</p>
-<button class="btn" onclick="finishMarshall(4)">≥ 5 fois</button>
-<button class="btn" onclick="finishMarshall(2)">3–4 fois</button>
-<button class="btn" onclick="finishMarshall(1)">1–2 fois</button>
+<p>≥ 30 min d’activité modérée ou marche rapide</p>
+<button class="btn" onclick="finishMarshall(4)">≥ 5 fois / semaine</button>
+<button class="btn" onclick="finishMarshall(2)">3–4 fois / semaine</button>
+<button class="btn" onclick="finishMarshall(1)">1–2 fois / semaine</button>
 <button class="btn" onclick="finishMarshall(0)">Jamais</button>
 <button class="btn secondary" onclick="back()">Retour</button>
-`,40);
+`,30);
 }
-function finishMarshall(v){
-  const score=state.result.m1+v;
-  state.result.niveau=score>=4?"suffisamment actif":"insuffisamment actif";
-  state.result.marshallScore=score;
+
+function finishMarshall(q2){
+  state.marshall.q2=q2;
+  const score=state.marshall.q1+q2;
+  state.result.niveau=score>=4?"suffisamment_actif":"insuffisamment_actif";
+  state.result.marshall_score=score;
   motivation();
 }
 
 /*************************************************
- * GPAQ (inchangé – validé)
+ * GPAQ — COMPLET (fidèle OMS)
  *************************************************/
-/* GPAQ code identique à la version validée – raccourci ici
-   👉 IL EST BIEN PRÉSENT ET FONCTIONNEL
-   👉 Je ne l’ai PAS modifié
-   (pour la lisibilité de ce message, je n’ai pas répliqué 100% ici)
-*/
+function gpaqQ1(){
+render(`
+<h2>Travail – activité intense</h2>
+<p>Votre travail comporte-t-il des efforts physiques intenses ?</p>
+<button class="btn" onclick="state.gpaq.wi=1; gpaqQ2()">Oui</button>
+<button class="btn" onclick="state.gpaq.wi=0; gpaqQ4()">Non</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,10);
+}
+function gpaqQ2(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.wi_d=this.value"><button class="btn" onclick="gpaqQ3()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,20);}
+function gpaqQ3(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.wi_t=this.value"><button class="btn" onclick="gpaqQ4()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,30);}
+function gpaqQ4(){ render(`<h2>Travail – activité modérée</h2><p>Activité physique modérée au travail ?</p><button class="btn" onclick="state.gpaq.wm=1; gpaqQ5()">Oui</button><button class="btn" onclick="state.gpaq.wm=0; gpaqQ7()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,40);}
+function gpaqQ5(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.wm_d=this.value"><button class="btn" onclick="gpaqQ6()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,50);}
+function gpaqQ6(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.wm_t=this.value"><button class="btn" onclick="gpaqQ7()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,60);}
+function gpaqQ7(){ render(`<h2>Déplacements</h2><p>≥ 10 min à pied ou à vélo ?</p><button class="btn" onclick="state.gpaq.tr=1; gpaqQ8()">Oui</button><button class="btn" onclick="state.gpaq.tr=0; gpaqQ10()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,65);}
+function gpaqQ8(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.tr_d=this.value"><button class="btn" onclick="gpaqQ9()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,70);}
+function gpaqQ9(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.tr_t=this.value"><button class="btn" onclick="gpaqQ10()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,75);}
+function gpaqQ10(){ render(`<h2>Loisirs – activité intense</h2><p>Sports ou fitness intenses ?</p><button class="btn" onclick="state.gpaq.li=1; gpaqQ11()">Oui</button><button class="btn" onclick="state.gpaq.li=0; gpaqQ13()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,80);}
+function gpaqQ11(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.li_d=this.value"><button class="btn" onclick="gpaqQ12()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,82);}
+function gpaqQ12(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.li_t=this.value"><button class="btn" onclick="gpaqQ13()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,84);}
+function gpaqQ13(){ render(`<h2>Loisirs – activité modérée</h2><p>Activités modérées de loisirs ?</p><button class="btn" onclick="state.gpaq.lm=1; gpaqQ14()">Oui</button><button class="btn" onclick="state.gpaq.lm=0; gpaqQ16()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,86);}
+function gpaqQ14(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.lm_d=this.value"><button class="btn" onclick="gpaqQ15()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,88);}
+function gpaqQ15(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.lm_t=this.value"><button class="btn" onclick="gpaqQ16()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,90);}
+function gpaqQ16(){ render(`<h2>Sédentarité</h2><p>Temps assis / couché (hors sommeil)</p><input type="number" min="0" max="1440" onchange="state.gpaq.sed=this.value"><button class="btn" onclick="finishGPAQ()">Terminer</button><button class="btn secondary" onclick="back()">Retour</button>`,92);}
+
+function finishGPAQ(){
+  const wi=(state.gpaq.wi_d||0)*(state.gpaq.wi_t||0);
+  const li=(state.gpaq.li_d||0)*(state.gpaq.li_t||0);
+  const wm=(state.gpaq.wm_d||0)*(state.gpaq.wm_t||0);
+  const tr=(state.gpaq.tr_d||0)*(state.gpaq.tr_t||0);
+  const lm=(state.gpaq.lm_d||0)*(state.gpaq.lm_t||0);
+
+  const MET = wi*8 + li*8 + (wm+tr+lm)*4;
+  state.result.met=MET;
+
+  if(MET>=3000) state.result.niveau="très_actif";
+  else if(MET>=600) state.result.niveau="moyennement_actif";
+  else state.result.niveau="insuffisamment_actif";
+
+  motivation();
+}
 
 /*************************************************
  * MOTIVATION + EVA
  *************************************************/
 function motivation(){
-  if(state.result.niveau!=="insuffisamment actif"){
-    render(`
-<p>Êtes-vous actif à ce niveau depuis plus de 6 mois ?</p>
-<button class="btn" onclick="state.result.stade='consolidation';evaI()">Oui</button>
-<button class="btn" onclick="state.result.stade='action';evaI()">Non</button>
-<button class="btn secondary" onclick="back()">Retour</button>
-`,70);
-  }else{
-    render(`
-<p>Envisagez-vous d’augmenter votre activité physique dans les 30 jours ?</p>
-<button class="btn" onclick="state.result.stade='préparation';evaI()">Oui</button>
-<button class="btn" onclick="state.result.stade='indétermination';evaI()">Non</button>
-<button class="btn secondary" onclick="back()">Retour</button>
-`,70);
+  if(state.result.niveau!=="insuffisamment_actif"){
+    render(`<p>Actif à ce niveau depuis > 6 mois ?</p>
+    <button class="btn" onclick="state.result.stade='consolidation'; evaImp()">Oui</button>
+    <button class="btn" onclick="state.result.stade='action'; evaImp()">Non</button>
+    <button class="btn secondary" onclick="back()">Retour</button>`,94);
+  } else {
+    render(`<p>Augmenter l’activité dans les 30 jours ?</p>
+    <button class="btn" onclick="state.result.stade='préparation'; evaImp()">Oui</button>
+    <button class="btn" onclick="render('<p>Dans les 6 mois ?</p><button class=&quot;btn&quot; onclick=&quot;state.result.stade=\'intention\'; evaImp()&quot;>Oui</button><button class=&quot;btn&quot; onclick=&quot;state.result.stade=\'indétermination\'; evaImp()&quot;>Non</button><button class=&quot;btn secondary&quot; onclick=&quot;back()&quot;>Retour</button>',95,false)">Non</button>
+    <button class="btn secondary" onclick="back()">Retour</button>`,94);
   }
 }
-function evaI(){
-render(`
-<p>Importance de l’activité physique (0–10)</p>
-<input type="range" min="0" max="10" value="5"
-oninput="this.nextElementSibling.innerText=this.value">
+
+function evaImp(){
+render(`<p>Importance de l’activité physique (0–10)</p>
+<input type="range" min="0" max="10" value="5" oninput="this.nextElementSibling.innerText=this.value">
 <div>5</div>
-<button class="btn" onclick="state.result.importance=this.previousElementSibling.previousElementSibling.value;evaC()">Continuer</button>
-`,85);
+<button class="btn" onclick="state.result.importance=document.querySelector('input').value; evaConf()">Continuer</button>
+<button class="btn secondary" onclick="back()">Retour</button>`,97);
 }
-function evaC(){
-render(`
-<p>Confiance pour maintenir ou augmenter votre activité (0–10)</p>
-<input type="range" min="0" max="10" value="5"
-oninput="this.nextElementSibling.innerText=this.value">
+function evaConf(){
+render(`<p>Confiance pour maintenir ou augmenter l’activité (0–10)</p>
+<input type="range" min="0" max="10" value="5" oninput="this.nextElementSibling.innerText=this.value">
 <div>5</div>
-<button class="btn" onclick="state.result.confiance=this.previousElementSibling.previousElementSibling.value;resultat()">Terminer</button>
-`,95);
+<button class="btn" onclick="final()">Terminer</button>
+<button class="btn secondary" onclick="back()">Retour</button>`,99);
 }
 
 /*************************************************
- * AFFICHAGE CLINIQUE – ÉTAPE 2
+ * RÉSULTAT FINAL — ÉTAPE 2
  *************************************************/
-function resultat(){
-let html=`
-<h2>Conclusion</h2>
-<p><strong>Statut :</strong> ${state.result.niveau}`;
+function final(){
+let html=`<h2>Conclusion</h2>
+<p><strong>Niveau d’activité :</strong> ${state.result.niveau.replace("_"," ")}
+${state.result.met?` (${state.result.met} MET-min/semaine)`:""}
+${state.result.marshall_score!==undefined?` (score ${state.result.marshall_score})`:""}</p>
 
-if(state.result.met){
-  html+=` (${state.result.met} MET-min/semaine)`;
+<h3>Détails du questionnaire</h3>`;
+
+if(state.tool==="gpaq"){
+html+=`
+<div class="section"><strong>Travail – activité intense</strong><div class="answer">${state.gpaq.wi?`Oui — ${state.gpaq.wi_d} j/semaine, ${state.gpaq.wi_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Travail – activité modérée</strong><div class="answer">${state.gpaq.wm?`Oui — ${state.gpaq.wm_d} j/semaine, ${state.gpaq.wm_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Déplacements</strong><div class="answer">${state.gpaq.tr?`Oui — ${state.gpaq.tr_d} j/semaine, ${state.gpaq.tr_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Loisirs – activité intense</strong><div class="answer">${state.gpaq.li?`Oui — ${state.gpaq.li_d} j/semaine, ${state.gpaq.li_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Loisirs – activité modérée</strong><div class="answer">${state.gpaq.lm?`Oui — ${state.gpaq.lm_d} j/semaine, ${state.gpaq.lm_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Comportement sédentaire</strong><div class="answer">${state.gpaq.sed} min/jour</div></div>
+`;
 }
-if(state.result.marshallScore!==undefined){
-  html+=` (score Marshall = ${state.result.marshallScore})`;
+
+if(state.tool==="marshall"){
+html+=`
+<div class="section"><strong>Marshall – question 1</strong><div class="answer">${state.marshall.q1}</div></div>
+<div class="section"><strong>Marshall – question 2</strong><div class="answer">${state.marshall.q2}</div></div>
+`;
 }
-html+=`</p>`;
 
 html+=`
-<div class="section">
-<h3>Stade motivationnel</h3>
-<p>${state.result.stade}</p>
-</div>
+<div class="section"><strong>Stade motivationnel</strong><div class="answer">${state.result.stade}</div></div>
+<div class="section"><strong>Importance (0–10)</strong><div class="answer">${state.result.importance}</div></div>
+<div class="section"><strong>Confiance (0–10)</strong><div class="answer">${state.result.confiance}</div></div>
 
-<div class="section">
-<h3>Ressenti</h3>
-<p>Importance : ${state.result.importance}/10</p>
-<p>Confiance : ${state.result.confiance}/10</p>
-</div>
+<button class="btn secondary" onclick="location.reload()">Recommencer</button>
+<p class="footer">Outil d’aide à la consultation médicale.</p>
 `;
 
-render(html+`
-<p class="footer">
-Cet outil a pour objectif de préparer un échange avec votre médecin.<br>
-<a href="${RGPD_URL}" target="_blank">Politique de confidentialité</a>
-</p>
-`,100);
+render(html,100,false);
 }
 </script>
 </body>
