Revise questionnaire introduction text
Updated text to clarify questionnaire purpose and data handling.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function back(){
 render(`
 <h1>Activité physique</h1>
 <p>Questionnaire destiné à préparer votre consultation médicale.<br>
-Aucune donnée n’est enregistrée.</p>
+Je vous propose de répondre à ce questionnaire pour préparer votre consultation médicale. Commencez par répondre à l'un de ces 2 questionnaires pour mesurer votre niveau d'activité physique. L'idéal est de choisir le questionnaire GPAQ plus détaillé. Aucune donnée n’est enregistrée.</p>
 
 <div class="rgpd">
 <a href="https://abbe-web.github.io/Questionnaire-AutoEvaluation-AP/politique-confidentialite.html" target="_blank">
